fixed scrollbar thing

--- a/app/assets/stylesheets/custom1.css.scss
+++ b/app/assets/stylesheets/custom1.css.scss
@@ -152,7 +152,7 @@ li.unread {
 
 .popover-content {
   padding-top:0;
-  max-height: 200px;
+  max-height: 240px;
   overflow-y: auto;
 }
 
